// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AttributeSimpleLinkRepo filterQueryPart Should return simple link filter 1`] = `
Object {
  "_source": [Function],
  "bindVars": Object {
    "@value0": undefined,
    "value1": "label",
    "value2": "linked",
    "value3": "MyLabel",
  },
  "query": "FILTER 
                FIRST(FOR l IN @@value0
                    FILTER TO_STRING(r.@value1) == l._key
                RETURN l.@value2)
             == @value3",
}
`;

exports[`AttributeSimpleLinkRepo getValues Should return values for simple link attribute 1`] = `
Object {
  "_source": [Function],
  "bindVars": Object {
    "@value0": "test_lib",
    "@value2": "test_linked_lib",
    "value1": "123456",
    "value3": "test_simple_link_attr",
  },
  "query": "
                    FOR r IN @@value0
                        FILTER r._key == @value1
                        FOR l IN @@value2
                            FILTER r.@value3 == l._key
                            RETURN l
                ",
}
`;

exports[`AttributeSimpleLinkRepo getValues Should return values for simple link attribute 2`] = `undefined`;

exports[`AttributeSimpleLinkRepo sortQueryPart Should return simple link sort 1`] = `
Object {
  "_source": [Function],
  "bindVars": Object {
    "@value0": undefined,
    "value1": "label",
    "value2": "linked",
    "value3": "ASC",
  },
  "query": "SORT 
                FIRST(FOR l IN @@value0
                    FILTER TO_STRING(r.@value1) == l._key
                RETURN l.@value2)
             @value3",
}
`;
